make responsive, align - center, correct margins and paddings, shorter names of classes, correction of divs in html

--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ body {
 .features h4 {
   padding-bottom: 28px;
   font-size: 1.6em;
-  font-family: Lato-Light, AdobeInvisFont, MyriadPro-Regular;
+  font-family: "Lato-Light", "AdobeInvisFont", "MyriadPro-Regular";
 }
 
 .features p {
@@ -322,57 +322,55 @@ body {
   background: #f4f4f5;
 }
 
-.iphone__feature__wrapper {
+.iphone__ftr__wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0px auto;
   padding-top: 87px;
-  /* max-width: 1168px; */
   padding-bottom: 42px;
 }
 
-.iphone__feature-item {
+.iphone__ftr__wrapper>img {
   padding-left: 0;
   width: 50%;
+
 }
 
-.iphone__feature-item img {
-  padding-left: 0;
-  width: 100%;
+.iphone__ftr-container {
+  padding-top: 10%;
+  padding-bottom: 15%;
+  padding-right: 10%;
 }
 
-.iphone__feature-container {
-  padding-top: 138px;
-  padding-bottom: 191px;
-  padding-right: 219px;
-}
-
-.iphone__feature-text {
+.iphone__ftr-text {
   width: 470px;
   height: 325px;
 }
 
-.iphone__feature-text h3 {
+.iphone__ftr-text h3 {
   padding: 52px 0;
   font-size: 2.63em;
-  font-family: VarelaRound, AdobeInvisFont, MyriadPro-Regular;
+  font-weight: 400;
+  font-family: "VarelaRound", "AdobeInvisFont", "MyriadPro";
 }
 
-.iphone__feature-text p {
-  padding-top: 20px;
+.iphone__ftr-text p {
+  padding-top: 10px;
+  margin-bottom: 10px;
   font-size: 1.25em;
-  font-family: Lato-Regular, AdobeInvisFont, MyriadPro-Regular;
+  font-weight: 400;
+  font-family: "Lato", "AdobeInvisFont", "MyriadPro";
 }
 
-.iphone__feature__buttons {
+.iphone__ftr__buttons {
   display: flex;
   align-items: center;
   justify-content: left;
 }
 
-.iphone__feature__buttons button {
-  margin-top: 74px;
+.iphone__ftr__buttons button {
+  margin-top: 64px;
   margin-right: 18px;
 
   border-radius: 30px;
@@ -382,36 +380,61 @@ body {
   -o-border-radius: 30px;
 
   transition: 0.3s;
-  border: none;
   cursor: pointer;
   outline: none;
 }
 
-.iphone__feature__button-try {
+.iphone__ftr__buttons a {
+  font-family: "Lato-Regular", "AdobeInvisFont", "MyriadPro-Regular";
+
+  font-size: 1em;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.iphone__ftr__btn-try {
   width: 203px;
   height: 43px;
+  padding: 15px 19px 14px 27px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   background: #267DF4;
+  border: none;
+
+}
+
+.iphone__ftr__btn-try:hover {
+  box-shadow: 1px 5px 5px 1px rgba(0, 0, 0, 0.2);
+}
+
+.iphone__ftr__btn-try:active {
+  background-color: #26272D;
+}
+
+.iphone__ftr__btn-try a {
   color: #FFFFFF;
 }
 
-.iphone__feature__button-learn {
+.iphone__ftr__btn-learn {
   width: 143px;
   height: 43px;
-  background: #26272D;
-  /* opacity: 0.1; */
-  color: #26272D;
+  padding: 15px 30px 15px 34px;
+  border: 1px solid #c4c2cc;
+  display: flex;
+  align-items: center;
 }
 
-.iphone__feature__buttons button a {
-  font-family: "Lato";
-  /* -Regular AdobeInvisFont MyriadPro-Regular;
-  */
+.iphone__ftr__btn-learn:hover {
+  box-shadow: 1px 5px 5px 1px rgba(0, 0, 0, 0.2);
+}
 
-  font-size: 1em;
-  text-decoration: none;
+.iphone__ftr__btn-learn:active {
+  background-color: #d9d9e8;
+}
+
+.iphone__ftr__btn-learn a {
+  color: #26272D;
 }
 
 /* / iphone__feature styles end */
@@ -1093,6 +1116,28 @@ body {
   .features p {
     width: 400px;
   }
+
+  .iphone__ftr__wrapper {
+    justify-content: space-around;
+    margin: 0 auto;
+    padding-top: 87px;
+    padding-bottom: 42px;
+  }
+
+  .iphone__ftr__wrapper>img {
+    width: 45%;
+
+  }
+
+  .iphone__ftr-container {
+    padding-top: 10%;
+    padding-bottom: 15%;
+    padding-right: 2%;
+  }
+
+  .iphone__ftr-text {
+    width: 400px;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -1202,6 +1247,7 @@ body {
 
   .features__block {
     padding-bottom: 60px;
+    text-align: center;
   }
 
   .features__block img {
@@ -1215,6 +1261,34 @@ body {
   .features p {
     width: auto;
     padding-top: 10px;
+  }
+
+
+  .iphone__ftr__wrapper {
+    justify-content: space-around;
+    margin: auto;
+    padding: 10%;
+  }
+
+  .iphone__ftr__wrapper>img {
+    width: 80%;
+  }
+
+  .iphone__ftr-container {
+    padding: 10% 0 0 0;
+  }
+
+  .iphone__ftr-text {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    text-align: center;
+  }
+  .iphone__ftr__buttons {
+    justify-content: space-around;
+  }
+  .iphone__ftr__buttons button {
+    margin: 10% 0;
   }
 
   @media screen and (max-width: 820px) {
@@ -1258,6 +1332,15 @@ body {
   }
 
   @media screen and (max-width: 576px) {
+
+    .iphone__ftr__buttons {
+      display: flex;
+      flex-direction: column;
+    }
+    .iphone__ftr__buttons button {
+      margin: 5% 0;
+    }
+    
     .plan__item {
       width: 350px;
     }
